# algorithm

./: .clang-format  .gitignore  CMakeLists.txt
include/: type.h
src/: CMakeLists.txt
src/simple/: CMakeLists.txt  simple.c  simple.h  simple_1.c  simple_1.h  type.h
test/: CMakeLists.txt  note.md  test_main.c
tools/: CMakeLists.txt  hash.c  hash.h  link.c  link.h  map.c  map.h  queue.c  queue.h  search.c  search.h  sort.c  sort.h  stack.c  stack.h  tools.c  tools.h
